# Minimum_Plant_Model

./: Project_layout.txt  README.md  UML_diagram.ipynb  UML_diagrams_MPM.ipynb  drivers_natural_all.csv  drivers_radiation_setpoint_natural_temp.csv  drivers_setpoints.csv  generated_hourly_weather_data.csv  generated_hourly_weather_data_setpoints.csv  model_outputs.csv  parameters.csv  pyproject.toml  resource_pools_2RPs.csv  skeleton_drw.ipynb  skeleton_drw.py
Original_deprecated/: skeleton_drw.py
Original_deprecated/model input files/: drivers_natural_all.csv
model input files/: drivers_radiation_natural_temp_setpoint.csv  parameters.csv  resource_pools_2RPs.csv  resource_pools_3RPs.csv  resource_pools_8RPs.csv  resource_pools_single.csv
model input files/temperature_scenarios/: drivers_setpoints_12_26_temperature.csv  drivers_setpoints_18_26_temperature.csv  drivers_setpoints_18_temperature.csv  drivers_setpoints_26_12_temperature.csv  drivers_setpoints_26_18_temperature.csv  drivers_setpoints_high_low_temperature.csv  drivers_setpoints_high_temperature.csv  drivers_setpoints_low_high_temperature.csv  drivers_setpoints_low_temperature.csv
mpm/: __init__.py  cli.py
mpm/deprecated_onefilecode/: Brassica.py  Cotton.py
mpm/environment/: __init__.py  aboveground.py  atmosphere.py  base.py
mpm/mpm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mpm/plant/: __init__.py  (+5 more)
testdata/: Brassica_CC_ResourcePool.csv  Brassica_CC_driver.csv  Brassica_CC_parameters.csv  Cotton_ResourcePool.csv  Cotton_driver.csv  Cotton_parameters.csv
tests/: test_regression.py
(+11 files in other folders)
